--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- App base theme -->
+    <color name="yellow_primary">#FFE600</color>
+    <color name="yellow_variant">#FFD000</color>
+    <color name="blue_secondary">#2D3277</color>
+    <color name="blue_variant">#1F2254</color>
 
-    <!-- -->
+    <color name="colorOnPrimary">#000000</color>
+    <color name="colorOnSecondary">#FFFFFF</color>
+
+    <color name="background">#FFFFFF</color>
+    <color name="onBackground">#1A1A1A</color>
+
+    <color name="surface">#F5F5F5</color>
+    <color name="onSurface">#1A1A1A</color>
+
+    <!-- App icon -->
     <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
