feat: implement search bar and search history on home activity
# Adjust theme to work with material3
# Localize search bar string
# Add new colors
# Add home activity layout
# Implement home activity with material3 search bar
# Add a singleton to managing shared preferences access

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <!-- App base theme -->
     <color name="yellow_primary">#FFE600</color>
+    <color name="yellow_secondary">#FFDF7B</color>
     <color name="yellow_variant">#FFD000</color>
     <color name="blue_secondary">#2D3277</color>
     <color name="blue_variant">#1F2254</color>
+    <color name="grey_primary">#838282</color>
 
     <color name="colorOnPrimary">#000000</color>
     <color name="colorOnSecondary">#FFFFFF</color>
