--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Mlchallengeandroid" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Mlchallengeandroid" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/yellow_primary</item>
         <item name="colorPrimaryVariant">@color/yellow_variant</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
