--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -25,29 +25,81 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         app:layout_constraintStart_toEndOf="@id/itemImageView"
-        app:layout_constraintTop_toTopOf="@id/itemImageView"
-        app:layout_constraintBottom_toBottomOf="@id/itemImageView"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Título exemplo"
+            tools:text="Item title"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/subtitleTextView"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/huggingView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Subtítulo ou descrição aqui"
+            android:paddingBottom="8dp"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/sellerTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="Seller information"
+                android:textSize="11sp"
+                android:paddingTop="2dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/originalPriceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textStyle=""
+                tools:text="1234.56"
+                android:paddingTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/sellerTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/priceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="1234.56"
+                android:paddingTop="2dp"
+                app:layout_constraintTop_toBottomOf="@id/originalPriceTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/shippingTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textAlignment="textEnd"
+        android:textColor="@color/green_light"
+        android:textStyle="bold"
+        tools:text="Frete gratis"
+        android:paddingTop="2dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
