--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
 
     <!-- App icon -->
     <color name="ic_launcher_background">#FFFFFF</color>
+
+    <!-- Item -->
+    <color name="green_light">#3F9042</color>
 </resources>
