--- a/app/src/main/res/layout/custom_top_bar.xml
+++ b/app/src/main/res/layout/custom_top_bar.xml
@@ -2,13 +2,15 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/yellow_variant"
+        app:layout_scrollFlags="scroll|enterAlways"
         tools:title="Top bar title" />
 
 </com.google.android.material.appbar.AppBarLayout>
