--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="SectionCardStyle">
+        <item name="android:background">#F5F5F5</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
 </resources>
