--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -13,7 +13,7 @@
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:contentDescription="TODO"
-        android:scaleType="fitCenter"
+        android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
