--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -89,8 +89,19 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:indeterminate="true" />
+
+                        <ImageView
+                            android:id="@+id/carousel_error_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@id/item_title"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:visibility="gone"
+                            android:src="@drawable/ic_error" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -188,13 +199,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        app:layout_constraintTop_toBottomOf="@id/item_title"
+                        app:layout_constraintTop_toBottomOf="@id/specification_view"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginTop="16dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:indeterminate="true" />
+
+                    <ImageView
+                        android:id="@+id/specification_error_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/specification_view"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_error" />
 
                 </LinearLayout>
 
@@ -206,6 +229,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/description_title"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         style="@style/HomeTextView"
@@ -225,13 +249,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        app:layout_constraintTop_toBottomOf="@id/item_title"
+                        app:layout_constraintTop_toBottomOf="@id/description_title"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginTop="16dp"
                         android:visibility="visible"
                         android:indeterminate="true" />
+
+                    <ImageView
+                        android:id="@+id/description_error_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/description_title"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_error" />
 
                 </LinearLayout>
 
