--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            app:indicatorColor="@color/yellow_variant"
+            app:indicatorColor="@color/yellow_secondary"
             app:trackColor="@color/grey_primary"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
