--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.Mlchallengeandroid" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/yellow_primary</item>
-        <item name="colorPrimaryVariant">@color/yellow_variant</item>
+        <item name="colorPrimaryVariant">@color/yellow_primary</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
 
         <item name="colorSecondary">@color/blue_secondary</item>
