--- a/app/src/main/res/layout/custom_top_bar.xml
+++ b/app/src/main/res/layout/custom_top_bar.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/yellow_primary"
+        app:menu="@menu/menu_item_detail"
         app:layout_scrollFlags="scroll|enterAlways"
         tools:title="Top bar title" />
 
