--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -27,6 +27,7 @@
         android:id="@+id/category_error_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/image_error"
         android:layout_marginTop="16dp"
         android:visibility="gone"
         android:src="@drawable/ic_error" />
