--- a/app/src/main/res/layout/item_carrousel.xml
+++ b/app/src/main/res/layout/item_carrousel.xml
@@ -12,6 +12,7 @@
         android:id="@+id/carousel_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/item_image"
         android:scaleType="centerInside" />
 
 </com.google.android.material.carousel.MaskableFrameLayout>
